--- a/Projeto/Style/layout.css
+++ b/Projeto/Style/layout.css
@@ -1471,6 +1471,7 @@ form button{
 }
 
 
+
 @media only screen and (min-width: 410px){
   body{width: 100%;}
  img{width: 100%;}
@@ -1580,6 +1581,225 @@ form button{
 
 }
 
+@media only screen and (min-width: 550px){
+  body{width: 100%;}
+ img{width: 100%;}
+
+  .barra2{
+    width: 85%;
+  }
+  
+  .save_image{
+    right:15px;
+    height: 20px;
+    width: 20px;
+   }
+
+   .img_share{
+     right: 50px;
+     height: 20px;
+     width: 20px;
+   }
+
+  .barra2_filho{
+    font-size: 15px;
+    width: 70%;
+  }
+  
+  .barra_autor button{
+    width: 40px;
+    height: 38px;
+    overflow: hidden;
+    
+  }
+
+  .share{
+    transform: translateY(-3%);
+  }
+
+
+  .redirect{
+    position: absolute;
+    bottom:10px;
+    right: 10px;
+  }
+  
+  .redirect img{
+    height: 65px;
+    width: 53px; 
+  }
+
+  .text1{
+    font-size: 15px;
+  }
+
+  .date_rel{
+    font-size: 14px;
+  }
+
+  .days{
+    font-size:14px;
+  }
+  
+  .text2{
+    font-size: 15px;
+  }
+
+
+
+  .pat{
+    font-size: 14px;
+  }
+
+  
+
+  .inst_sites{
+
+    width: 100%;
+
+  }
+
+  .form{
+    position: static;
+    width: 100%;
+  }
+
+.begin-session{
+  width: 60%;
+}
+
+.dropdown{
+  left: 0px;
+}
+
+.comment-textarea{
+  top:10px;
+  width:100%;
+}
+
+.comentarios div{
+  font-size: 13px;
+}
+.veja img{
+ transform: translateY(0%);
+}
+
+.veja ul{
+  font-size: 14px;
+}
+
+}
+
+@media only screen and (min-width: 650px){
+  body{width: 100%;}
+ img{width: 100%;}
+
+  .barra2{
+    width: 90%;
+  }
+  
+  .save_image{
+    right:15px;
+    height: 20px;
+    width: 20px;
+   }
+
+   .img_share{
+     right: 50px;
+     height: 20px;
+     width: 20px;
+   }
+
+  .barra2_filho{
+    font-size: 17px;
+    width: 80%;
+  }
+  
+  .barra_autor button{
+    width: 40px;
+    height: 38px;
+    overflow: hidden;
+    
+  }
+
+  .share{
+    transform: translateY(-3%);
+  }
+
+
+  .redirect{
+    position: absolute;
+    bottom:10px;
+    right: 10px;
+  }
+  
+  .redirect img{
+    height: 65px;
+    width: 53px; 
+  }
+
+  .text1{
+    font-size: 16px;
+  }
+
+  .date_rel{
+    font-size: 14px;
+  }
+
+  .days{
+    font-size:14px;
+  }
+  
+  .text2{
+    font-size: 16px;
+  }
+
+
+
+  .pat{
+    font-size: 14px;
+  }
+
+  
+
+  .inst_sites{
+
+    width: 100%;
+
+  }
+
+  .form{
+    position: static;
+    width: 100%;
+  }
+
+.begin-session{
+  width: 60%;
+}
+
+.dropdown{
+  left: 0px;
+}
+
+.comment-textarea{
+  top:10px;
+  width:100%;
+}
+
+.comentarios div{
+  font-size: 13px;
+}
+.veja img{
+ transform: translateY(0%);
+}
+
+.veja ul{
+  font-size: 14px;
+}
+
+}
+
+
 
 @media only screen and (min-width: 750px){
   body{
@@ -1642,6 +1862,8 @@ form button{
 
   .days{
     font-size:15px;
+    left: 48px;
+    position: absolute;
   }
   
   .text2{
@@ -1685,6 +1907,13 @@ form button{
  
  .veja ul{
    font-size: 15px;
+   left: 70px;
+   position: absolute;
+ }
+
+ .save{
+   position: relative;
+   left: 140px;
  }
 
 }
@@ -1696,7 +1925,7 @@ form button{
 
   
   .barra2{
-    width: 85%;
+    width: 90%;
   }
   
   .save_image{
@@ -1712,8 +1941,8 @@ form button{
    }
 
   .barra2_filho{
-    font-size: 14px;
-    width: 60%;
+    font-size: 19px;
+    width: 80%;
   }
   
   .barra_autor button{
@@ -1740,23 +1969,26 @@ form button{
   }
 
   .text1{
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .date_rel{
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .days{
-    font-size:14px;
+    font-size:15px;
+    left: 48px;
+    position: absolute;
   }
   
   .text2{
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .pat{
-    font-size: 14px;
+    font-size: 15px;
+  
   }
 
   .inst_sites{
@@ -1794,7 +2026,7 @@ form button{
    }
 
   .barra2_filho{
-    font-size: 14px;
+    font-size: 19px;
     width: 60%;
   }
   
@@ -1822,23 +2054,25 @@ form button{
   }
 
   .text1{
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .date_rel{
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .days{
-    font-size:14px;
+    font-size:15px;
+    left: 48px;
+    position: absolute;
   }
   
   .text2{
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .pat{
-    font-size: 14px;
+    font-size: 15px;
   }
 
   .inst_sites{
@@ -1853,7 +2087,7 @@ form button{
 
 }
 
-@media only screen and (min-width: 1000px){
+@media only screen and (min-width: 1024px){
   body{width: 100%;}
   /*img{width: 100%;}*/
 
@@ -1864,7 +2098,7 @@ form button{
  
 
   .barra2_filho{
-    font-size: 22px;
+    font-size: 25px;
     width: 75%;
   }
 
@@ -1900,23 +2134,25 @@ form button{
   }
 
   .text1{
-    font-size: 19px;
+    font-size: 21px;
   }
 
   .date_rel{
-    font-size: 17px;
+    font-size: 18px;
   }
 
   .days{
-    font-size:17px;
+    font-size:18px;
+    left: 60px;
+    position: absolute;
   }
   
   .text2{
-    font-size: 19px;
+    font-size: 21px;
   }
 
   .pat{
-    font-size: 17px;
+    font-size: 18px;
   }
 
   .inst_sites{
@@ -1934,10 +2170,36 @@ form button{
   }
   
   .comentarios div{
-    font-size: 19px;
+    font-size: 18px;
+  }
+
+  .begin-session p{
+    font-size: 17px;
+  }
+
+  .form p{
+    font-size: 17px;
+  }
+
+  .form-text{
+    font-size: 17px;
+  }
+
+  .veja ul{
+    font-size: 18px;
+    left: 90px;
+    position: absolute;
+    transform: translateY(-165%);
+  }
+
+  .save{
+    position: relative;
+    left: 170px;
   }
  
 }
+
+
 
 
 /*Fim do medias------------------------------------------------------------------------------------------------*/
