--- a/Projeto/Style/layout_pesquisar.css
+++ b/Projeto/Style/layout_pesquisar.css
@@ -127,41 +127,68 @@ input::placeholder{
    
 }
 
+
+
 .under{
     position:relative;
     top:12px;
     font-size: 24px;
     color:#b8c2cb;
+    
 }
 
-    
 
 .justify{
-    
     display: flex;
     justify-content: space-between;
+
 }
+
+
+
 i.home{
     padding: 5px;
     font-size: 30px;
     position: relative;
     top: 10px;
     margin-left: 50px;
+    cursor: pointer;
+    
 }
  .buscar{
     padding: 8px ;
-
+    cursor: pointer;
 }
 
 .marcador{
     padding:5px 8px;
     margin:0px;
+    cursor: pointer;
 }
 .menu{
     padding:5px 8px;
     margin-right: 50px;
-
+    width: 30px;
+    cursor: pointer;
 }
+
+.in{
+    display: none;
+}
+
+
+
+.sec:checked + .bookmark{
+    display: block;
+}
+
+.thir:checked + .open-menu{
+    display: block;
+}
+
+
+
+
 /* fim barra inferior*/
 /* Bookmark*/
 div.bookmark{
@@ -171,10 +198,10 @@ div.bookmark{
     background-color: white;
     position: absolute;
     top:0;
-    display: block;
+    display: none;
     color:#8995a0;
     overflow: auto;
-    display:none;
+  
    
 
   
@@ -226,6 +253,8 @@ section{
 
 }
 /*Menu*/
+
+
 div.open-menu{
     width: 100%;
     height: 100%;
@@ -233,11 +262,10 @@ div.open-menu{
     z-index:1;
     position: absolute;
     top: 0;
-    display:block;
     color:#575757;
     overflow-y:auto;
     display: none;
-  
+    
   
 }
 .menu-p{
