--- a/Projeto/Style/layout_pesquisar.css
+++ b/Projeto/Style/layout_pesquisar.css
@@ -1,19 +1,25 @@
 /* geral*/
 body{
 width: 100%;
-color: #575757;
+height: 100%;
 font-size: 16px;
 font-family:"Source Sans Pro", sans-serif ;
 margin:0;
 padding:0;
 
 }
+.pagina-pesquisar{
+    background-color: white;
+    color: #575757;
+    width: 100%;
+    height: 100%;
+}
 
 img.imagem{
     width: 20px;
     height: 21px;
     margin-top: 5px;
-    margin-right: 10px;;
+    margin-right: 10px;
 }
 a:hover{
  background: none;
@@ -55,11 +61,11 @@ button{
 }
 /* barra superior */
 .top_bar{
-    background-color:white;
+    background-color:inherit;
     height: 57.5px;
     width: 100%;
     top:0;
-    position: fixed;
+   
     box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -82,7 +88,7 @@ input{
     float:left;
     margin-top:15px;
     margin-bottom:10px;
-    background-color: white;
+    background-color: inherit;
     padding-left: 40px;
     border:none;         
     font-size: 18px;
@@ -117,7 +123,7 @@ input::placeholder{
    }
 /* barra inferior*/
 .bar{
-    background-color:white;
+    background-color:inherit;
     height: 57.5px;
     width: 100%;
     bottom:0;
@@ -189,8 +195,9 @@ i.home{
 .check2:checked + .open-menu{
     display: block;
 }
-.check1:checked + .open-menu{
-    display: none;
+input[type=checkbox]:checked + .pagina-pesquisar{
+  background-color: black;
+  color:white;
 }
 
 
@@ -201,7 +208,7 @@ div.bookmark{
     width: 100%;
     height:100%;
     z-index:1;
-    background-color: white;
+    background-color:inherit;
     position: absolute;
     top:0;
     display: none;
@@ -213,6 +220,7 @@ div.bookmark{
   
 
 }
+
 i.back{
     margin-top: 10px;
     margin-left:10px;
@@ -227,6 +235,7 @@ i.back{
     padding: 5px;
     height: auto;
     display: inline-block;
+    background-color: inherit;
     
 
 }
@@ -248,7 +257,7 @@ section{
     align-items: center;
     display: flex;
     justify-content: center;
-   
+   background-color: inherit;
 
 }
 .bookmark-empty{
@@ -264,7 +273,7 @@ section{
 div.open-menu{
     width: 100%;
     height: 100%;
-    background-color:white;
+    background-color:inherit;
     z-index:1;
     position: absolute;
     top: 0;
@@ -308,6 +317,7 @@ div.open-menu{
     height:140px;
     border-bottom: 1px solid  #dbe1e5;
     overflow-x: auto;
+    background-color: inherit;
   
 
 }
@@ -344,6 +354,7 @@ section.categorias{
     overflow-x:hidden;
     display: block;
     margin-bottom: 80px;
+    background-color: inherit;
 
   
 
