--- a/Projeto/Style/layout_pesquisar.css
+++ b/Projeto/Style/layout_pesquisar.css
@@ -1,4 +1,10 @@
 /* geral*/
+html{
+    width: 100%;
+    height: 100%;   
+}
+
+
 body{
 width: 100%;
 height: 100%;
@@ -28,6 +34,7 @@ i.icon{
     font-size: 24px;
     border-radius: 50%;
     color:#aca5a5;
+    background-color: inherit;
 }
 
 .icon:hover{ 
@@ -45,7 +52,8 @@ i.color-blue{
 button{
     padding:0;
     box-sizing:content-box;
-    background-color: white;
+    color: inherit;
+    background-color: inherit;
     border:none;
     border-radius: 50%;
     outline:none;
@@ -63,7 +71,7 @@ button{
 .top_bar{
     background-color:inherit;
     height: 57.5px;
-    width: 100%;
+    width: 99%;
     top:0;
    
     box-shadow: 0px 6.2px  6px -6px rgba(0,0,0,0.2);
@@ -195,10 +203,20 @@ i.home{
 .check2:checked + .open-menu{
     display: block;
 }
-input[type=checkbox]:checked + .pagina-pesquisar{
-  background-color: black;
+input[type=checkbox]:checked + .pagina-pesquisar {
+  background-color: rgba(39, 37, 37, 0.966);
   color:white;
 }
+
+
+input[type=checkbox]:checked + .pagina-pesquisar  .explorer {
+    background-color: rgba(65,65,65,0.75);
+  
+  }
+  input[type=checkbox]:checked + .pagina-pesquisar  .paragraph{
+    color: white;
+  
+  }
 
 
 
@@ -309,7 +327,7 @@ div.open-menu{
     padding:5px;
     margin:4px 2px;
     border-radius: 50%;
-    background-color:#f1f5f8;
+    background-color:inherit;
     color: #8995a0;
 }
 
@@ -385,6 +403,7 @@ section.categorias{
     position:relative;
     text-align: left;
     width: 50%;
+    
     /*padding:15px;*/
     height: auto;
 
@@ -398,7 +417,7 @@ li img{
     width:100%;
     margin:5px;
     border-radius: 5px;
-
+    background-color: #F1F5F8;
 }
 
 
@@ -415,7 +434,7 @@ li img{
     
 }
 .go-to-search{
-    color:#030303;
+    color:inherit;
     font: 16px "Surce sans Pro",sans-serif;
     margin-bottom: 5px;
     margin-top: 5px;
